style: translate logs to russian